--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   hive_flutter: ^1.1.0
-  hive: ^2.2.3
+  hive: ^2.0.4
 
 dev_dependencies:
+  build_runner: ^2.1.5
+  hive_generator: ^1.1.1
   flutter_test:
     sdk: flutter
 
@@ -48,8 +50,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  build_runner: 2.1.5
-  hive_generator: 1.1.1
+ 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
