--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,9 @@ dependencies:
   hive: ^2.0.4
 
 dev_dependencies:
-  build_runner: ^2.1.5
+  build_runner: ^2.4.8
   hive_generator: ^1.1.1
+  analyzer: ^4.7.0
   flutter_test:
     sdk: flutter
 
